# volterra_hawkes

./: README.md  environment.yml  pyproject.toml  setup.py
docs/: conf.py  index.rst  modules.rst  setup.rst  volterra_hawkes.iVi.rst  volterra_hawkes.kernel.rst  volterra_hawkes.point_processes.rst  volterra_hawkes.riccati.rst  volterra_hawkes.rst  volterra_hawkes.utility.rst
experiments/Experiment(T=0.75, n_steps=100, kernel=GammaKernel(alpha=2, lam=3, c=8.1), mu=5)_2025-08-26_09_49_17_k0/: results.json
experiments/Experiment(T=1, n_steps=100, kernel=GammaKernel(alpha=2, lam=3, c=8.1), mu=5)_2025-08-25_21_37_48/: results.json
experiments/Experiment(T=1, n_steps=100, kernel=GammaKernel(alpha=2, lam=3, c=8.1), mu=5)_2025-08-26_00_31_17_k0/: results.json
experiments/Experiment(T=1, n_steps=100, kernel=GammaKernel(alpha=2, lam=3, c=8.1), mu=5)_after_ij/: results.json
experiments/Experiment(T=1, n_steps=100, kernel=GammaKernel(alpha=2, lam=3, c=8.1), mu=5)_before_ij/: results.json
notebook/: VolterraHawkesScheme.ipynb
notebooks/: Final_VolterraHestonSimulationNotebook.ipynb  IG Simulation.ipynb  Long-time behavior.ipynb  VolterraHawkesScheme.ipynb  VolterraHawkesScheme_old.ipynb  VolterraHestonNewScheme.ipynb  iVi_Hawkes_example.ipynb  iVi_Hawkes_experiments_run.ipynb  iVi_Hawkes_numerics.ipynb  iVi_Hawkes_numerics_article.ipynb  iVi_Hawkes_simulation.ipynb  iVi_VolterraHeston.ipynb  iVi_VolterraHeston_example.ipynb  kernels test.ipynb  numerical_tests.py
volterra_hawkes/: iVi.py
(+126 files in other folders)
